Spread the new design to the Space Time page and fixed the problem with overflow when opening the nav menu

--- a/css/index.css
+++ b/css/index.css
@@ -11,11 +11,12 @@
 }
 
 .left {
-  width: 55%;
+  width: 50%;
 }
 
 .right {
-  width: 45%;
+  width: 50%;
+  text-align: center;
 }
 
 /* Clear floats after the columns */
@@ -39,17 +40,20 @@
   }
 }
 
+html {
+  height: 100%;
+}
+
 body {
-  height: 100vh;
   background-image: var(--bg);
-  background-size: 50vmax;
+  background-size: 40vmax;
   background-repeat: no-repeat;
   background-position: left bottom;
 }
 
 .main-navigation::after {
   background-image: var(--bg);
-  background-size: 50vmax;
+  background-size: 40vmax;
   background-repeat: no-repeat;
   background-position: left bottom;
 }
